--- a/Foundation/Foundation.vcxproj.filters
+++ b/Foundation/Foundation.vcxproj.filters
@@ -18,12 +18,6 @@
     <ClCompile Include="source\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="source\ownLib\Matrix.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="source\ownLib\Array.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\ownLib\Matrix.h">
@@ -33,6 +27,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="source\ownLib\List.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\ownLib\Vector3.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
