More usage testing + timer
Very basic timer to measure milliseconds. I'd like to note this usage testing has been invaluable in learning and using pointers plus other lessons in memory.

--- a/Foundation/Foundation.vcxproj
+++ b/Foundation/Foundation.vcxproj
@@ -137,6 +137,7 @@
     <ClInclude Include="source\ownLib\Array.h" />
     <ClInclude Include="source\ownLib\List.h" />
     <ClInclude Include="source\ownLib\Matrix.h" />
+    <ClInclude Include="source\ownLib\Timer.h" />
     <ClInclude Include="source\ownLib\Vector3.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
