New NeuralNetwork class, building out Matrices, optimisations
Started a new testcase - Neural Networks - in order to build out functionality of the Matrix data structure.  Also made some small optimisations to copy behaviour of List DS.

--- a/Foundation/Foundation.vcxproj
+++ b/Foundation/Foundation.vcxproj
@@ -132,8 +132,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="source\main.cpp" />
+    <ClCompile Include="source\NeuralNetworkTest\NeuralNetwork.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="source\NeuralNetworkTest\NeuralNetwork.h" />
     <ClInclude Include="source\ownLib\Array.h" />
     <ClInclude Include="source\ownLib\LibraryInclude.h" />
     <ClInclude Include="source\ownLib\List.h" />
