--- a/ConsoleSnakeGame/ConsoleSnakeGame.vcxproj.filters
+++ b/ConsoleSnakeGame/ConsoleSnakeGame.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="source\PlayState.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\World.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\SnakeTools\SnakeGraphics.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="source\PlayState.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\World.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
