--- a/ConsoleSnakeGame/ConsoleSnakeGame.vcxproj
+++ b/ConsoleSnakeGame/ConsoleSnakeGame.vcxproj
@@ -135,6 +135,7 @@
     <ClCompile Include="source\Gamemanager.cpp" />
     <ClCompile Include="source\GameObject.cpp" />
     <ClCompile Include="source\Main.cpp" />
+    <ClCompile Include="source\MenuState.cpp" />
     <ClCompile Include="source\PlayerAgent.cpp" />
     <ClCompile Include="source\PlayState.cpp" />
     <ClCompile Include="source\Snake.cpp" />
@@ -148,6 +149,7 @@
     <ClInclude Include="source\BaseAgent.h" />
     <ClInclude Include="source\Gamemanager.h" />
     <ClInclude Include="source\GameObject.h" />
+    <ClInclude Include="source\MenuState.h" />
     <ClInclude Include="source\PlayerAgent.h" />
     <ClInclude Include="source\PlayState.h" />
     <ClInclude Include="source\Snake.h" />
