--- a/ConsoleSnakeGame/ConsoleSnakeGame.vcxproj.filters
+++ b/ConsoleSnakeGame/ConsoleSnakeGame.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="source\EndScreen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\Gameobjects\Wall.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\SnakeTools\SnakeGraphics.h">
@@ -135,6 +138,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="source\EndScreen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\Gameobjects\Wall.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
